# FigureMate

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24af77533a2b_create_figure_text_matches.py  25ce680a8378_create_figure_explanations.py  27cd5e246b4c_create_paper_section_paragraph.py  fb7eab2e5c35_create_figures.py
backend/app/: main.py
backend/app/agents/explainer_agent/: README.md  node.py  prompt.md  schema.py
backend/app/agents/grounding_agent/: README.md  node.py  prompt.md  schema.py
backend/app/api/: routes_figures.py  routes_papers.py
backend/app/core/: config.py  db.py
backend/app/core/llm/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  ollama_provider.py
backend/app/graph/: README.md  pipeline_graph.py  state.py
backend/app/models/: __init__.py  explanation.py  figure.py  match.py  paper.py
backend/app/schemas/: explanation.py  figure.py  match.py  paper.py
backend/app/services/: document_parser.py  figure_classifier.py  figure_extractor.py  pipeline.py  storage.py
backend/tests/: conftest.py
backend/tests/agents/explainer_agent/: test_node.py
backend/tests/agents/grounding_agent/: test_node.py
backend/tests/api/: test_routes_figures.py  test_routes_papers.py
backend/tests/core/: test_llm_providers.py
backend/tests/fixtures/sample_papers/: README.md  paper1.expected.json  (+7 more)
backend/tests/services/: test_document_parser.py  test_figure_classifier.py  test_figure_extractor.py  test_pipeline_retry.py
(+21 files in other folders)
